k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ecommerce-frontend-service
  namespace: ecommerce
spec:
  type: ClusterIP
  selector:
    app: ecommerce-frontend
  ports:
  - name: tcp
    port: 80
    targetPort: 80
    protocol: TCP
